--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
         <form class="login-form" action="/login" method="POST">
             <div class="form-group">
                 <label class="form-label" for="username">Username <span class="required-field">*</span></label>
-                <input type="username" class="form-control" id="usernme" name="username">
+                <input type="username" class="form-control" id="usernme" name="username" autocomplete="no">
             </div>
             <div class="form-group">
                 <label class="form-label" for="password">Password <span class="required-field">*</span></label>
