--- a/views/missingReport.ejs
+++ b/views/missingReport.ejs
@@ -13,7 +13,7 @@
 <body>
     <%- include('partials/header') %>
     <div class="form-container">
-        <form class="missing-report-form" action="/missing" method="POST">
+        <form class="missing-report-form" action="/missing" method="POST" enctype="multipart/form-data">
             <div class="form-container__main-form">
                 <fieldset>
                     <legend class="form-group-title">Missing Person</legend>
