design home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
 </head>
 <body>
-
-    <div id="floating-panel">
+    <%- include('partials/header') %> 
+    <!-- <div id="floating-panel">
         <button id="toggle-heatmap">Toggle Heatmap</button>
         <button id="change-gradient">Change gradient</button>
         <button id="change-radius">Change radius</button>
         <button id="change-opacity">Change opacity</button>
       </div>
-      <div id="map"></div>
+      <div id="map"></div> -->
+      <video src="videos/m1.mp4" style="width: 100%" autoplay muted></video>
 
     <script src="javascript/maps.js"></script>
     <script async
