add about us page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,7 @@
             <a class="navbar-item-link" href="/">Home</a>
         </li>
         <li class="navbar-item">
-            <a class="navbar-item-link" href="">About Us</a>
+            <a class="navbar-item-link" href="/about">About Us</a>
         </li>
         <li class="navbar-item">
             <a class="navbar-item-link <%=locals.missing && 'nav-item-active'%>" href="/missing">Missing Report</a>
