--- a/views/mobileFaceScan.ejs
+++ b/views/mobileFaceScan.ejs
@@ -35,24 +35,8 @@
         </div>
     </div>
     <form class="contentarea" method="POST" enctype="multipart/form-data">
-        <h1 class="face-scan-title">
-            Face Scan
-        </h1>
-        <div class="scan-container">
-            <div class="scan-container__video">
-                <div class="camera">
-                    <video id="video">Video stream not available.</video>
-                </div>
-                <div><button id="startbutton">Take and scan photo</button></div>
-                <p>Camera</p>
-            </div>
-            <canvas id="canvas"></canvas>
-            <div class="output">
-                <img id="photo" alt="The screen capture will appear in this box.">
-                <p>Final Photograph</p>
-          </div>
-        </div>
-        <!-- <input type="file" name="inputImg" id="" capture="capture"> -->
+        <input type="file" name="inputImg" id="" capture="capture">
+        <button id="startbutton">Take and scan photo</button>
     </form>
     <div id="loader">
         <object data="images/loader.svg" width="90" height="90"></object>
@@ -62,6 +46,6 @@
         <btn id="missingReportShowBtn">Show Missing Report</btn>
     </div>
 
-    <script src="javascript/faceScan.js"></script>
+    <script src="javascript/mobileFaceScan.js"></script>
 </body>
 </html>
